feat: added function to ste the pickable date to future dates only
- implemented a check for the date and setting the date to a future date in board html and addtask.html

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -17,7 +17,7 @@
     <script src="../scripts/login_and_summary/avatar.js"></script>
 </head>
 
-<body class="body" onload="implementListenerToPreventEnterIssue()">
+<body class="body" onload="implementListenerToPreventEnterIssue(), setDateToFuture()">
     <aside class="sidebar sidebar-sticky">
         <div class="sidebar_upper_section">
             <section class="logo-section">
