feat: added function to close list if outside click
- gave button id

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -141,7 +141,7 @@
                         </form>
                         <form class="input-form">
                             <p class="form-title">Assigned to</p>
-                            <button class="contact-button" type="button" onclick="showContacts()">
+                            <button id="contact-button" class="contact-button" type="button" onclick="showContacts()">
                                 <p>Select contacts to assign</p>
                                 <img src="../assets/icons/addTask/dropdown.svg" alt="dropdown_icon">
                             </button>
